# sycl_project

./: CMakeLists.txt  README.md  index.html
.github/workflows/: deploy-pages.yml
docs/: index.html
include/: data_loader.hpp  math_utils.hpp  nist_tests.hpp
scripts/: regen_figures.py
src/: benchmark.cpp  data_loader.cpp  frequency_block.cpp  frequency_monobit.cpp  main.cpp  math_utils.cpp
tests/: test_nist.cpp
